--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ml5/0.7.2/ml5.min.js"></script>
-  <script src="script.js" defer></script>
+  <script src="sketch.js" defer></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 
   <script src="libraries/p5.min.js"></script>
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div id="canvas-container"></div>
+
 </body>
 
 </html>
